--- a/style.css
+++ b/style.css
@@ -31,8 +31,16 @@ position: absolute;
     bottom:-27px;
     width: 80px;
     /*right: -80px;*/
-    animation: pipe-animation 1.5s infinite linear;
+    animation: pipe-animation 1.0s infinite linear;
 }
+.mario{
+    width: 150px;
+    position: absolute;
+    bottom: 0px;
+    padding-bottom:34px ;
+}
+
+
 .mario{
     width: 150px;
     position: absolute;
